--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -2,4 +2,6 @@ footer {
     color: white;
     background-image: linear-gradient(to right, #304876, #ea8bb7);
     padding: 5px;
+    flex-shrink: 0;
+    border-top: solid 3px #948E99;
 }
