--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,28 +1,30 @@
-html, body {
-    height: 100%;
-  }
+html,
+body {
+  height: 100%;
+}
 
-  body {
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Helvetica;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    background-image: url(../img/moss-bg-darker.jpg);
-    background-size: auto;
-    background-position: static;
-  }
+body {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Helvetica;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  background-image: url(../img/moss-bg-darker.jpg);
+  background-size: auto;
+  background-position: static;
+}
 
-  /* Container Around About Me */
+/* Container Around About Me */
 #aboutme {
-    background-color: #676a9e;
-    margin-left: 15px;
-    margin: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 30px;
-    border-radius: 5px;
-    border: solid 1px #ea8bb7;
-    width: 60%;
+  background-color: #676a9e;
+  margin-left: 15px;
+  margin: auto;
+  color: white;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 30px;
+  border-radius: 5px;
+  border: solid 1px #ea8bb7;
+  width: 60%;
 }
 
 /* About Me Text on Home */
@@ -32,85 +34,91 @@ html, body {
 
 /* Box Around My Name */
 .box {
-    background-color: black;
-    opacity: .6;
-    text-align: center;
-    color: white;
-    padding: 20px;
-    font-family: 'Raleway', sans-serif;
-  }
-  
-   /* Bio Image */
-#profile-img {
-    margin-right: 12px;
-    margin-bottom: 12px;
-    border-radius: 50%;
+  background-color: black;
+  opacity: 0.6;
+  text-align: center;
+  color: white;
+  padding: 20px;
+  font-family: "Raleway", sans-serif;
 }
 
- /* Kitty Image */
- #kitties {
- border-radius: 50%;
- margin-left: 12px;
- margin-bottom: 12px;
- }
+/* Bio Image */
+#profile-img {
+  margin-right: 12px;
+  margin-bottom: 12px;
+  border-radius: 50%;
+}
 
- /* Image Hover Animation */
+/* Kitty Image */
+#kitties {
+  border-radius: 50%;
+  margin-left: 12px;
+  margin-bottom: 12px;
+}
+
+/* Image Hover Animation */
 img:hover {
-    box-shadow: 0 0 2px 2px #ea8bb7;
-  }
+  box-shadow: 0 0 2px 2px #ea8bb7;
+}
 
 /* All List Items */
-li {
-    background-color: #ea8bb7;
-  }
+li,
+.li1 {
+  background-color: #ea8bb7;
+}
 
-  /* Skills */
-.list-group-item {
-    background-color: #ea8bb7;
-    color: white;
-    margin-left: 10px;
+/* Skills */
+.list-group {
+  background-color: #ea8bb7;
+  color: white;
+  margin-left: 10px;
+}
+
+.list-group-item:hover {
+  background-color: #829cb4;
+  color: white;
+}
+
+/* Second Column of Skills */
+.li2 {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+b {
+  font-size: 1.2em;
+}
+
+@media (min-width: 768px) {
+  .container-small {
+    width: 300px;
   }
-  
-  .list-group-item:hover {
-    background-color: #829cb4;
-    color: white;
+  .container-large {
+    width: 970px;
   }
-  
-  /* Second Column of Skills */
-  .li2 {
-    margin-left: 4px;
-    margin-right: 4px;
+}
+@media (min-width: 992px) {
+  .container-small {
+    width: 500px;
   }
-  
-  b {
-    font-size: 1.2em;
+  .container-large {
+    width: 1170px;
   }
-  
-  @media (min-width: 768px) {
-    .container-small {
-        width: 300px;
-    }
-    .container-large {
-        width: 970px;
-    } 
-  } 
-  @media (min-width: 992px) {
-    .container-small {
-        width: 500px;
-    }
-    .container-large {
-        width: 1170px;
-    } 
-  } 
-  @media (min-width: 1200px) {
-    .container-small {
-        width: 700px;
-    }
-    .container-large {
-        width: 1500px;
-    } 
+}
+@media (min-width: 1200px) {
+  .container-small {
+    width: 700px;
   }
-  
-  .container-small, .container-large {
-    max-width: 100%;
+  .container-large {
+    width: 1500px;
   }
+}
+
+.container-small,
+.container-large {
+  max-width: 100%;
+}
+
+.content {
+  flex: 1 0 auto;
+}
