--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -18,7 +18,7 @@ body {
   background-color: #829cb4;
   border-radius: 5px;
   margin: auto;
-  width: 55%;
+  width: 70%;
   padding: 10px;
   border: solid 1px #ea8bb7;
 }
@@ -82,5 +82,5 @@ label {
 }
 
 .email-phone {
-    
+    float: inline-start;
 }
