Fixed broken portfolio images

--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -32,6 +32,10 @@ body {
     margin-top: 3px;
   }
 
+  .card:hover {
+    box-shadow: 0 0 2px 2px #ea8bb7;
+  }
+
 
   .content {
     flex: 1 0 auto;
@@ -40,3 +44,4 @@ body {
   .container-small, .container-large {
     max-width: 100%;
   }
+
